Delegate to do list is working

--- a/M11ToDoListNotes/Base.lproj/Main.storyboard
+++ b/M11ToDoListNotes/Base.lproj/Main.storyboard
@@ -8,10 +8,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Add List-->
+        <!--Add List N-->
         <scene sceneID="gFb-9H-v38">
             <objects>
-                <viewController id="Yfd-wx-kiW" customClass="AddListViewController" customModule="M11ToDoListNotes" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="Yfd-wx-kiW" userLabel="Add List N" customClass="AddListViewController" customModule="M11ToDoListNotes" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" opaque="NO" contentMode="scaleToFill" id="pYB-jU-UKz">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -78,16 +78,16 @@
             </objects>
             <point key="canvasLocation" x="2785" y="565"/>
         </scene>
-        <!--To Do List-->
+        <!--To Do List D-->
         <scene sceneID="0ph-E9-Zwl">
             <objects>
-                <tableViewController id="95U-Mz-u9Z" customClass="TableViewControllerD" sceneMemberID="viewController">
+                <tableViewController id="95U-Mz-u9Z" userLabel="To Do List D" customClass="ListTableViewControllerD" customModule="M11ToDoListNotes" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="EDY-pa-s90">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell2" id="rcH-8d-UVc">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell1" id="rcH-8d-UVc">
                                 <rect key="frame" x="0.0" y="50" width="393" height="43.666667938232422"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="rcH-8d-UVc" id="3Dg-5H-OE5">
@@ -97,19 +97,25 @@
                             </tableViewCell>
                         </prototypes>
                         <connections>
-                            <outlet property="dataSource" destination="95U-Mz-u9Z" id="INt-jN-TNS"/>
-                            <outlet property="delegate" destination="95U-Mz-u9Z" id="A2A-c8-2rw"/>
+                            <outlet property="dataSource" destination="95U-Mz-u9Z" id="0lZ-iU-IKf"/>
+                            <outlet property="delegate" destination="95U-Mz-u9Z" id="f7j-BB-h9m"/>
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="To Do List" id="VKu-C2-yYY">
-                        <barButtonItem key="backBarButtonItem" title="Back" id="vBd-cD-wuW"/>
-                        <barButtonItem key="leftBarButtonItem" title="Back" id="aQC-1N-gdw"/>
+                        <barButtonItem key="leftBarButtonItem" title="Back" id="aQC-1N-gdw">
+                            <connections>
+                                <action selector="backButton:" destination="95U-Mz-u9Z" id="kKc-DX-eIE"/>
+                            </connections>
+                        </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" title="+" id="Rjn-P9-Hrc">
                             <connections>
                                 <segue destination="Kkc-Rb-adr" kind="show" id="pb7-rv-2Rv"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="toDoTableViewD" destination="EDY-pa-s90" id="lkA-3O-asP"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="XeA-CH-4bk" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -199,10 +205,10 @@
             </objects>
             <point key="canvasLocation" x="1036" y="-163"/>
         </scene>
-        <!--To Do List-->
+        <!--To Do List P-->
         <scene sceneID="aIT-0c-QKK">
             <objects>
-                <viewController id="6nr-Y6-w49" customClass="ListViewControllerP" customModule="M11ToDoListNotes" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="6nr-Y6-w49" userLabel="To Do List P" customClass="ListViewControllerP" customModule="M11ToDoListNotes" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="g58-lO-tPE">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -220,6 +226,9 @@
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                 </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="6nr-Y6-w49" id="TB9-0V-Kt2"/>
+                                </connections>
                             </tableView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="VQk-X5-UZx"/>
@@ -232,14 +241,20 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="To Do List" id="Dh8-Ow-Myt">
-                        <barButtonItem key="backBarButtonItem" title="Back" id="Zga-tZ-qjd"/>
-                        <barButtonItem key="leftBarButtonItem" title="Back" id="62u-Mg-bUP"/>
+                        <barButtonItem key="leftBarButtonItem" title="Back" id="62u-Mg-bUP">
+                            <connections>
+                                <action selector="backButton:" destination="6nr-Y6-w49" id="MlY-S2-EXd"/>
+                            </connections>
+                        </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" title="+" id="ahC-ge-fZl">
                             <connections>
                                 <segue destination="1OJ-Lw-bOI" kind="show" id="yDj-Z5-Prk"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="toDoTableViewP" destination="C5W-Vw-0Lq" id="ng7-dp-2ji"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wNB-UB-0bm" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -283,7 +298,7 @@
                         <color key="backgroundColor" systemColor="systemPurpleColor"/>
                         <textAttributes key="titleTextAttributes">
                             <fontDescription key="fontDescription" type="boldSystem" pointSize="36"/>
-                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <color key="textColor" systemColor="systemGray5Color"/>
                         </textAttributes>
                         <textAttributes key="largeTitleTextAttributes">
                             <fontDescription key="fontDescription" type="system" pointSize="24"/>
@@ -298,10 +313,10 @@
             </objects>
             <point key="canvasLocation" x="1036" y="-834"/>
         </scene>
-        <!--Add List-->
+        <!--Add List D-->
         <scene sceneID="UUo-on-ft6">
             <objects>
-                <viewController id="JJO-MK-fj6" customClass="AddListViewControllerD" sceneMemberID="viewController">
+                <viewController id="JJO-MK-fj6" userLabel="Add List D" customClass="AddListViewControllerD" customModule="M11ToDoListNotes" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" opaque="NO" contentMode="scaleToFill" id="VS7-mf-n1a">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -325,16 +340,19 @@
                         <barButtonItem key="leftBarButtonItem" title="Cancel" id="Vys-Ie-g5i">
                             <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <connections>
-                                <action selector="cancel:" destination="JJO-MK-fj6" id="Cnd-ua-qaE"/>
+                                <action selector="cancel:" destination="JJO-MK-fj6" id="Iya-zJ-AzX"/>
                             </connections>
                         </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" title="Save" id="VK4-m8-Ibz">
                             <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <connections>
+                                <action selector="save:" destination="JJO-MK-fj6" id="Ozq-gc-IKb"/>
+                            </connections>
                         </barButtonItem>
                     </navigationItem>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
-                        <outlet property="inputField" destination="LZ7-ML-jeM" id="qSN-jb-Yap"/>
+                        <outlet property="inputField" destination="LZ7-ML-jeM" id="7nm-GY-OmR"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="96i-AK-TWT" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -368,10 +386,10 @@
             </objects>
             <point key="canvasLocation" x="3621" y="-163"/>
         </scene>
-        <!--Add List-->
+        <!--Add List P-->
         <scene sceneID="K9q-eV-aMS">
             <objects>
-                <viewController id="f6W-RD-Cb4" customClass="AddListViewController" customModule="M11ToDoListNotes" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="f6W-RD-Cb4" userLabel="Add List P" customClass="AddListViewControllerP" customModule="M11ToDoListNotes" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" opaque="NO" contentMode="scaleToFill" id="xxT-8r-P1L">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -395,16 +413,19 @@
                         <barButtonItem key="leftBarButtonItem" title="Cancel" id="pM9-1n-6AY">
                             <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <connections>
-                                <action selector="cancel:" destination="f6W-RD-Cb4" id="32A-fC-k0I"/>
+                                <action selector="cancel:" destination="f6W-RD-Cb4" id="pLK-VP-yg3"/>
                             </connections>
                         </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" title="Save" id="iTC-0M-z0S">
                             <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <connections>
+                                <action selector="save:" destination="f6W-RD-Cb4" id="TAf-Mz-jhA"/>
+                            </connections>
                         </barButtonItem>
                     </navigationItem>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
-                        <outlet property="inputField" destination="Swl-2r-Px7" id="QwT-wF-DQT"/>
+                        <outlet property="inputField" destination="Swl-2r-Px7" id="xEt-Zi-brc"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bFG-bb-O7r" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -438,16 +459,16 @@
             </objects>
             <point key="canvasLocation" x="2827" y="-835"/>
         </scene>
-        <!--To Do List-->
+        <!--To Do List N-->
         <scene sceneID="CdJ-fg-0IJ">
             <objects>
-                <tableViewController id="zpm-sI-grX" customClass="ListTableViewController" customModule="M11ToDoListNotes" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController id="zpm-sI-grX" userLabel="To Do List N" customClass="ListTableViewController" customModule="M11ToDoListNotes" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="eG3-69-9D7">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell2" id="Beo-4o-ErM">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell1" id="Beo-4o-ErM">
                                 <rect key="frame" x="0.0" y="50" width="393" height="43.666667938232422"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Beo-4o-ErM" id="ErI-PJ-IOD">
@@ -457,13 +478,16 @@
                             </tableViewCell>
                         </prototypes>
                         <connections>
-                            <outlet property="dataSource" destination="zpm-sI-grX" id="eMz-Rf-69w"/>
-                            <outlet property="delegate" destination="zpm-sI-grX" id="wxh-6C-9FQ"/>
+                            <outlet property="dataSource" destination="zpm-sI-grX" id="o1s-Hs-PFm"/>
+                            <outlet property="delegate" destination="zpm-sI-grX" id="DZC-K3-ehr"/>
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="To Do List" id="Qdr-2J-Boa">
-                        <barButtonItem key="backBarButtonItem" title="Back" id="UQ1-8a-lIL"/>
-                        <barButtonItem key="leftBarButtonItem" title="Back" id="xaH-i2-pzW"/>
+                        <barButtonItem key="leftBarButtonItem" title="Back" id="xaH-i2-pzW">
+                            <connections>
+                                <action selector="backButton:" destination="zpm-sI-grX" id="oY6-zV-dKe"/>
+                            </connections>
+                        </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" title="+" id="CJV-Gh-UO8">
                             <connections>
                                 <segue destination="hpJ-u3-N2m" kind="show" id="TNm-2c-6wv"/>
@@ -471,7 +495,7 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
-                        <outlet property="toDoTableView" destination="eG3-69-9D7" id="umw-u9-xHc"/>
+                        <outlet property="toDoTableViewN" destination="eG3-69-9D7" id="hE6-k9-Jip"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mTu-ul-Aqo" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -508,6 +532,9 @@
     <resources>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGray5Color">
+            <color red="0.8980392157" green="0.8980392157" blue="0.91764705879999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemGreenColor">
             <color red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
