Delegate and notification to do list completed. Can't get property to do list completed.

--- a/M11ToDoListNotes/Base.lproj/Main.storyboard
+++ b/M11ToDoListNotes/Base.lproj/Main.storyboard
@@ -40,6 +40,9 @@
                         </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" title="Save" id="BuA-cS-e5J">
                             <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <connections>
+                                <action selector="save:" destination="Yfd-wx-kiW" id="uz3-Xp-bU7"/>
+                            </connections>
                         </barButtonItem>
                     </navigationItem>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
@@ -208,7 +211,7 @@
         <!--To Do List P-->
         <scene sceneID="aIT-0c-QKK">
             <objects>
-                <viewController id="6nr-Y6-w49" userLabel="To Do List P" customClass="ListViewControllerP" customModule="M11ToDoListNotes" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="To Do List P" id="6nr-Y6-w49" userLabel="To Do List P" customClass="ListViewControllerP" customModule="M11ToDoListNotes" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="g58-lO-tPE">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
